add build directory to gitignore
